<resources>
    <string name="app_name">StepByStep</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="logo_description">Logo aplikacji.</string>

    <!-- General Settings -->
    <string name="general_category">General Settings</string>
    <string name="units_key">unitsKey</string>
    <string name="dailyGoal_key">dailyGoal</string>

    <!-- Profile Settings -->
    <string name="profile_category">Profile Settings</string>
    <string name="firstName_key">firstNameKey</string>
    <string name="lastName_key">lastNameKey</string>
    <string name="gender_key">genderKey</string>
    <string name="date_key">dateKey</string>
    <string name="height_key">heightKey</string>
    <string name="weight_key">weightKey</string>

    <!-- Advanced Settings -->
    <string name="advanced_category">Advanced Settings</string>
    <string name="notifications_key">notificationsKey</string>
    <string name="deleteData_key">deleteDataKey</string>

</resources>
